After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781862 - window-props: Fix frame update on hide-titlebar-when-maximized changes
window-props: Fix frame update on hide-titlebar-when-maximized changes
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2017-04-27 21:04 UTC by Florian Müllner
Modified: 2017-04-28 20:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window-props: Fix frame update on hide-titlebar-when-maximized changes (1.02 KB, patch)
2017-04-27 21:04 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2017-04-27 21:04:06 UTC
See patch.
Comment 1 Florian Müllner 2017-04-27 21:04:10 UTC
Created attachment 350599 [details] [review]
window-props: Fix frame update on hide-titlebar-when-maximized changes

Since we started caching frame borders in commit b4036e061, we need to
invalidate the cache for changes of the GTK_HIDE_TITLEBAR_WHEN_MAXIMIZED
property to take effect immediately.
Comment 2 Rui Matos 2017-04-28 14:37:57 UTC
Review of attachment 350599 [details] [review]:

sure
Comment 3 Florian Müllner 2017-04-28 14:44:58 UTC
Attachment 350599 [details] pushed as 891cab3 - window-props: Fix frame update on hide-titlebar-when-maximized changes
Comment 4 Jan Niklas Hasse (Account disabled) 2017-04-28 18:31:41 UTC
Thanks Florian! This hack can now be removed, correct?
https://github.com/deadalnix/pixel-saver/blob/1472f857fd3ea2a11f60d0396628eb48558108fd/pixel-saver%40deadalnix.me/decoration.js#L219

What would be the easiest way for an extension to find out if this bug is fixed or not? Create a separate version for 3.26+?
Comment 5 Florian Müllner 2017-04-28 20:23:09 UTC
(In reply to Jan Niklas Hasse from comment #4)
> Thanks Florian! This hack can now be removed, correct?

Yes.


> What would be the easiest way for an extension to find out if this bug is
> fixed or not? Create a separate version for 3.26+?

Yeah, there's no API/functionality that can be tested for here. So adding a separate version for 3.26 (or 3.24, as the fix is on the gnome-3-24 branch as well to be included in 3.24.2) looks like the best option.